--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "formik": "^2.1.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-popper": "^2.2.3",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.5.1"
+    "reactstrap": "^8.5.1",
+    "redux": "^4.0.5",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
