--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.1",
+    "react-redux-form": "^1.16.14",
     "react-router-dom": "^4.2.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
     "yup": "^0.29.3"
   },
   "scripts": {
