--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.29.3"
   },
   "scripts": {
